<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".views.MainActivity">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/statusChipGroup"
            style="@style/CustomChipChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTitle"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:textSize="14sp"
                app:chipStrokeColor="@color/chipStrokeColor"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:textSize="14sp"
                app:chipStrokeColor="@color/chipStrokeColor"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textSize="14sp"
                app:chipStrokeColor="@color/chipStrokeColor"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/statusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/charactersRW"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusChipGroup"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/search_character"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listTypeIcon" />

        <ImageView
            android:id="@+id/listTypeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/list_type_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_line" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rick_and_morty_app"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/charactersLoadingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/charactersRW"
            app:layout_constraintEnd_toEndOf="@+id/charactersRW"
            app:layout_constraintStart_toStartOf="@+id/charactersRW"
            app:layout_constraintTop_toTopOf="@+id/charactersRW" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_retry_no_internet"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/charactersRW"
            app:layout_constraintEnd_toEndOf="@+id/charactersRW"
            app:layout_constraintStart_toStartOf="@+id/charactersRW"
            app:layout_constraintTop_toTopOf="@+id/charactersRW" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>